apps/70-tools/netbox/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbox
spec:
  selector:
    app: netbox
  ports:
    - protocol: TCP
      port: 8080 # Service port
      targetPort: http # Refers to the named port in the deployment
