apps/70-tools/netbox/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netbox
spec:
  endpointSelector:
    matchLabels:
      app: netbox
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
        - matchLabels:
            io.kubernetes.pod.namespace: keda
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
